components/cart/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  labels:
    opentelemetry.io/name: cart
    app.kubernetes.io/version: 3.0.0
    app.kubernetes.io/component: cart
    app.kubernetes.io/name: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      opentelemetry.io/name: cart
  template:
    metadata:
      labels:
        opentelemetry.io/name: cart
        app.kubernetes.io/version: 3.0.0
        app.kubernetes.io/component: cart
        app.kubernetes.io/name: cart
      annotations:
        resource.opentelemetry.io/service.namespace: webshop
    spec:
      containers:
      - name: cart
        image: public.ecr.aws/v4z2v9g0/webshop/cart:2026.09.04.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: service
        resources:
          limits:
            memory: 128Mi
