components/cart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  labels:
    app.kubernetes.io/tier: backend
    opentelemetry.io/name: cart
    app.kubernetes.io/component: cart
    app.kubernetes.io/name: cart
    app.kubernetes.io/part-of: webshop
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: tcp-service
    targetPort: 8080
  selector:
    opentelemetry.io/name: cart
